# SteamWatch

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SPEC.md  STATUS.md  SteamWatch.slnx  build.bat  build.sh  build.spec  discussion.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  test.bat
docs/: architecture.md  dev-log.md  manual-acceptance.md  manual-zh.txt
scripts/: build-installer.ps1  publish-portable.ps1
src/SteamWatch.App/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SteamWatch.App.csproj  app.manifest
src/SteamWatch.App/Properties/: launchSettings.json
src/SteamWatch.App/Services/: GameStatusSnapshot.cs  SteamWatchAppService.cs  TrayIconService.cs  WindowNativeMethods.cs  WindowsAppNotificationService.cs
src/SteamWatch.App/ViewModels/: GameListSnapshot.cs  GameRowViewModel.cs  LimitRuleRowViewModel.cs  PlaytimeStatRowViewModel.cs
src/SteamWatch.Core/Enforcement/: ForceCloseCountdownState.cs  ForceCloseDecision.cs  ForceClosePolicy.cs
src/SteamWatch.Core/Export/: ExportGame.cs  (+5 more)
src/SteamWatch.Infrastructure/: SteamWatch.Infrastructure.csproj
src/SteamWatch.Installer/: Program.cs  SteamWatch.Installer.csproj
src/steamwatch/: __init__.py  __main__.py  main.py
tests/: test_cache_reader.py  test_reminder_manager.py  test_steam_monitor.py  test_time_tracker.py  test_utils.py
tests/SteamWatch.Tests/: AppSettingsStoreTests.cs  CommandLineSplitterTests.cs  DataExporterTests.cs  ForceClosePolicyTests.cs  GameProcessTerminatorTests.cs  JsonFileStoreTests.cs  LimitEvaluatorTests.cs  LimitRuleStoreTests.cs  PasswordHasherTests.cs  PlaytimeRecordBookTests.cs  PlaytimeRecordStoreTests.cs  ReminderPolicyTests.cs  RunningGameSessionTests.cs  RuntimeLimitCoordinatorTests.cs  SteamCacheReaderTests.cs  SteamGameProcessIdentifierTests.cs  SteamGameProcessStateTrackerTests.cs  SteamManifestParserTests.cs  SteamPlaytimeSnapshotStoreTests.cs  SteamProcessMonitorTests.cs  SteamWatch.Tests.csproj  ToastXmlFactoryTests.cs  WindowsStartupManagerTests.cs
(+80 files in other folders)
